crates/cubecl-core/tests/error/array_variable.stderr
error: Array expressions can't be used at runtime
 --> tests/error/array_variable.rs:6:18
  |
6 |     let _array = [x, y];
  |                  ^^^^^^
